third_party/dart_piper_tts/lib/src/ffi.g.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
@ffi.DefaultAsset('package:dart_piper_tts/src/ffi.g.dart')
library;

import 'dart:ffi' as ffi;

@ffi.Native<
  FFIResponse Function(
    ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Int64 port)>>,
    ffi.Bool,
  )
>()
external FFIResponse init(
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Int64 port)>>
  completion_cb,
  bool is_debug,
);

@ffi.Native<
  FFIResponse Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
>()
external FFIResponse create_instance(
  ffi.Pointer<ffi.Char> model_path,
  ffi.Pointer<ffi.Char> config_path,
);

@ffi.Native<
  FFIResponse Function(
    ffi.Pointer<ffi.Void>,
    ffi.Pointer<ffi.Char>,
    ffi.Bool,
    ffi.Int64,
    ffi.Pointer<ffi.Char>,
    ffi.Uint8,
  )
>()
external FFIResponse speak(
  ffi.Pointer<ffi.Void> instance_ptr,
  ffi.Pointer<ffi.Char> text,
  bool is_phonemes,
  int port,
  ffi.Pointer<ffi.Char> phonemization_strategy,
  int phoneme_chunk_size,
);

@ffi.Native<FFIResponse Function(ffi.Pointer<ffi.Void>)>()
external FFIResponse pause(
  ffi.Pointer<ffi.Void> instance_ptr,
);

@ffi.Native<FFIResponse Function(ffi.Pointer<ffi.Void>)>()
external FFIResponse resume(
  ffi.Pointer<ffi.Void> instance_ptr,
);

@ffi.Native<FFIResponse Function(ffi.Pointer<ffi.Void>)>()
external FFIResponse stop(
  ffi.Pointer<ffi.Void> instance_ptr,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void dispose(
  ffi.Pointer<ffi.Void> instance_ptr,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Char>)>()
external void free_string(
  ffi.Pointer<ffi.Char> s,
);

final class FFIResponse extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;

  external ffi.Pointer<ffi.Char> error_message;
}
